--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -6204,3 +6204,93 @@
     model: 713S
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1.1; uk-ua; AOCOS PX102 Build/JRO03H) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30
+  os:
+    name: Android
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: Aocos
+    model: PX102
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; kPad) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.74 Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 95.0.4638.74
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: AllDocube
+    model: kPad
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; M40Pro_EEA) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.181 Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 88.0.4324.181
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Teclast
+    model: M40 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; Lenovo TB-J616X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 87.0.4280.141
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: Tab P11 Plus
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.3; W22PRO 3G Build/ICS.w22ref.20120912) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.0.3
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Ramos
+    model: W22 Pro 3G
+  os_family: Android
+  browser_family: Chrome
